# Vision-Computador-JNI

./: README.md
Guillen_Solano_Practica2_VisionComputador/: settings.gradle.kts
Guillen_Solano_Practica2_VisionComputador/app/: build.gradle.kts
Guillen_Solano_Practica2_VisionComputador/app/src/androidTest/java/ec/edu/ups/guillen_solano_practica2_visioncomputador/: ExampleInstrumentedTest.java
Guillen_Solano_Practica2_VisionComputador/app/src/main/: AndroidManifest.xml
Guillen_Solano_Practica2_VisionComputador/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Guillen_Solano_Practica2_VisionComputador/app/src/main/java/ec/edu/ups/guillen_solano_practica2_visioncomputador/: MainActivity.java
Guillen_Solano_Practica2_VisionComputador/app/src/main/res/layout/: activity_main.xml
Guillen_Solano_Practica2_VisionComputador/app/src/main/res/values/: strings.xml  themes.xml
Guillen_Solano_Practica2_VisionComputador/app/src/main/res/values-night/: themes.xml
Guillen_Solano_Practica2_VisionComputador/app/src/test/java/ec/edu/ups/guillen_solano_practica2_visioncomputador/: ExampleUnitTest.java
Guillen_Solano_Practica2_VisionComputador/gradle/wrapper/: gradle-wrapper.properties
Guillen_Solano_Practica2_VisionComputador/opencv/: build.gradle
